--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -15,7 +15,7 @@
               <% end %>
             </div>
              <% if @query.present? %>
-               <h2>Searching for... <span style="background-color: yellow"><%= @query %></span></h2>
+               <h2>Searching for... <span style="background-color: #FCD04D"><%= @query %></span></h2>
                <br>
              <% end %>
              <% if @posts.present? %>
