--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -29,6 +29,36 @@
   }
 }
 
+.highlight {
+  background-color: #FCD04D;
+}
+
+.small-text-wrapper * {
+  font-size: 14px;
+}
+
+.responsive-iframe-container {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+}
+
+/* Then style the iframe to fit in the container div with full height and width */
+.responsive-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+}
+
+br {
+  height: 10px !important;
+}
+
 .strikethrough, .strikethrough a {
   text-decoration: line-through;
   color: black !important;
@@ -45,8 +75,7 @@
   background-color: #E6F6FF !important;
 }
 
-#btn_pink {
-  position: absolute;
+#btn_dark {
   color: white;
   bottom:0px;
   right:0px;
@@ -59,6 +88,7 @@
   border-radius: 8px;
   padding: 10px 20px;
   text-transform: capitalize;
+  margin: 10px 0 0 0;
 }
 
 iframe {
@@ -67,6 +97,12 @@ iframe {
 
 .submit_btn:hover {
   cursor: pointer;
+}
+
+.image_70_prcnt {
+  width: 70% !important;
+  margin: 0 auto;
+  display: block;
 }
 
 .image_fit_scrn {
@@ -140,13 +176,18 @@ body {
 .editor {
   height: 200px;
   width: 100%;
-  background-color: #F0255E;
+  background-color: #085F63;
 }
 
 #banner_writing {
   width: 100%;
   max-height: 200px;
   object-fit: cover;
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 html, body {
@@ -712,6 +753,38 @@ body {
   flex-direction: column !important;
 }
 
+.social_icons_full {
+  padding: 0 0 30px 0;
+  a {
+    flex: 1;
+  }
+}
+
+.social_icons {
+  display: flex;
+  flex-direction: row;
+  min-width: 175px;
+  justify-content: space-between;
+  a {
+    color: #333;
+    text-align: center;
+    text-decoration: none;
+    &:hover {
+      color: #333;
+    }
+
+    div {
+      height: 40px;
+      background-color: #3b5998;
+    }
+  }
+
+  i {
+    color: white;
+    margin-top: 12px;
+  }
+}
+
 .post_info {
   display: flex;
   flex-direction: row;
@@ -746,6 +819,19 @@ body {
     }
   }
 
+  a {
+    color: #333;
+    text-align: center;
+    text-decoration: none;
+    &:hover {
+      color: #333;
+    }
+
+    div {
+      width: 40px;
+    }
+  }
+
   img {
     margin-right: 5px;
     min-width: 40px !important;
@@ -757,33 +843,6 @@ body {
     margin-right: 3px;
     margin-top: 0px;
     color: #333 !important;
-  }
-
-  .social_icons {
-    display: flex;
-    flex-direction: row;
-    min-width: 175px;
-    justify-content: space-between;
-  }
-
-  a {
-    color: #333;
-    text-align: center;
-    text-decoration: none;
-    &:hover {
-      color: #333;
-    }
-
-    div {
-      height: 40px;
-      width: 40px;
-      background-color: #3b5998;
-    }
-  }
-
-  i {
-    color: white;
-    margin-top: 12px;
   }
 
   .date {
@@ -915,7 +974,15 @@ footer {
     }
   }
 
-  .nav-title {
+  .nav-title-wrapper {
+    display: block;
+    position: relative;
+    a {
+      position: absolute;
+    }
+  }
+
+  .nav-title-wrapper a, .nav-title {
     font-family: 'justwaitandsee';
     font-size: 1.4rem;
     font-style: italic;
