--- a/app/assets/stylesheets/_welcome.css.scss
+++ b/app/assets/stylesheets/_welcome.css.scss
@@ -328,7 +328,7 @@ $gray:  #2a2a2a;
       margin: 10px 0;
       justify-content: space-between;
       a {
-        width: 24%;
+        flex: 1;
         margin-left: 0px;
         div {
           width: 100%;
