--- a/app/assets/stylesheets/onboarding.css.scss
+++ b/app/assets/stylesheets/onboarding.css.scss
@@ -621,6 +621,12 @@ a:hover {
   background-color: black;
 }
 
+@media(min-width: 900px) {
+  .btn-review {
+    margin-top: -2rem !important;
+  }
+}
+
 @media(max-width: 900px) {
   .flex-wrapper, .flex-drafts {
     .card {
@@ -635,9 +641,6 @@ a:hover {
     .card {
       width: 100% !important;
     }
-  }
-  .pitch_form_wrapper {
-    padding: 0;
   }
 }
 
@@ -689,5 +692,55 @@ a:hover {
     display: inline-block;
     margin: 20px 0;
     padding: 0;
+  }
+}
+
+
+.checkmark__circle {
+  stroke-dasharray: 166;
+  stroke-dashoffset: 166;
+  stroke-width: 2;
+  stroke-miterlimit: 10;
+  stroke: #F0255E;
+  fill: none;
+  animation: stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards;
+}
+
+.checkmark {
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  display: block;
+  stroke-width: 2;
+  stroke: #fff;
+  stroke-miterlimit: 10;
+  margin: 5% auto;
+  box-shadow: inset 0px 0px 0px #F0255E;
+  animation: fill .4s ease-in-out .4s forwards, scale .3s ease-in-out .9s both;
+}
+
+.checkmark__check {
+  transform-origin: 50% 50%;
+  stroke-dasharray: 48;
+  stroke-dashoffset: 48;
+  animation: stroke 0.3s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards;
+}
+
+@keyframes stroke {
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
+@keyframes scale {
+  0%, 100% {
+    transform: none;
+  }
+  50% {
+    transform: scale3d(1.1, 1.1, 1);
+  }
+}
+@keyframes fill {
+  100% {
+    box-shadow: inset 0px 0px 0px 30px #F0255E;
   }
 }
