--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -24,5 +24,5 @@
     </div>
   <% end %>
 
-  <a href="/login" class="link_nrml underline">Log in</a>
+  <a href="/login" class="link_nrml underline d-block mb-4">Log in</a>
 </div>
