--- a/app/views/pitches/index.html.erb
+++ b/app/views/pitches/index.html.erb
@@ -4,7 +4,7 @@
     <div>
       <h1 class="pitch_ttl"><%= @title %></h1>
       <% if @desc %>
-        <i>When you claim an article idea, the pitch will show up as claimed in your dashboard, and a new draft will be started. Please only claim pitches you intend to write. If you change your mind later, you can unclaim the pitch.</i>
+        <i>When you claim an article idea, the pitch will show up as claimed in your dashboard, and a new draft will be started. Only claim pitches you intend to write. If you change your mind later, you can unclaim the pitch.</i>
         <br><br>
         <p style="display: inline;">Filter by category</p>
         <%= form_for @pitch, method: "get" do |f| %>
@@ -29,7 +29,7 @@
         <div class="card-body">
           <h4 class="pitch_ttl"><%= link_to pitch.title, pitch, style: "color: black; text-decoration: none;" %></h4>
           <p class="card-text"> <%= pitch.description.truncate_words(20) %></p>
-          <%= link_to @button_text, pitch, :class => "btn btn-primary", :id => "btn_pink", style: "margin: 10px;" %>
+          <%= link_to @button_text, pitch, :class => "btn btn-primary", :id => "btn_dark" %>
         </div>
       </div>
     </a>
