--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -31,7 +31,7 @@
           <% end %>
         </div>
        </div>
-       <p><i>Please make the above changes before submitting your article again.</i></p>
+       <p class="mb-0"><i>Please make the above changes before submitting your article again.</i></p>
     <% end %>
   <% end %>
   <%= render 'form' %>
