--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -29,9 +29,9 @@
     <div id="site-wrapper">
       <%= render "layouts/partials/slide-in-menu" %>
       <div id="site-canvas">
-        <div class="banner_stts_relative">
+        <!-- <div class="banner_stts_relative">
           <p class= "banner_stts" style="background-color: black;"><span style="font-family: 'Griffy', cursive;">All Treats, No Tricks: </span> Get in the <span style="font-family: 'Griffy', cursive;">Spirit of Halloween</span> <i class="fas fa-ghost"></i> by grabbing your FREE copy of The Teen Magazine's October issue <a target="_blank" class="link_white" href="/subscribe">here</a>!</p>
-        </div>
+        </div> -->
         <div class="bodywrapper">
           <header id="main_navigation" class="clearfix">
             <div id="banner">
